# QGAN-Finance-Optimization

./: .gitignore  .pre-commit-config.yaml  README.md  acquisition.py  environment.yml  pyproject.toml  requirements.txt  test_ethical_constraints.py  yaml
Notebook/: 01_data_acquisotion.ipynb  02_data_preprocessing_ipynb.txt  03_baseline_models.ipynb  05_training_pipeline.ipynb  06_validation_analysis.ipynb  o4_qpan_development.ipynb
configs/: default.yaml  dukas_config.py  experiment_params.yaml  models_config.yaml  processing_config.yaml  qgan_circuit.yaml  training_config.yaml
data_pipeline/: __init__.py  acquisition.py  feature_engineering.py  integration.py
scripts/: run_full_experiment.py
src/classical/: __init__.py  discriminator.py
src/data/: features.py  preprocessing.py  validation.py
src/evaluation/: attacks.py  metric.py  robustness.py  visualization.py
src/quantum/: circuit.py  circuits_vqc.py  qgan.py  qgan_ethical.py  tomography.py  utils.py
src/training/: ethical_trainer.py  pipeline.py
src/utils/: __init__.py  config.py  config_loader.py  experiment_tracker.py  logger.py  logging_setup.py
