[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qgan-llm-cybersecurity"
version = "0.1.0"
authors = [
    {name = "Alex Guiffo", email = "alex.guiffo@university.edu"}
]
description = "Quantum GAN for LLM Accuracy Optimization in Capital Markets"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "pre-commit>=3.0"
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]